# sweep

./: .gitignore  AGENTS.md  Package.resolved  Package.swift  README.md  magnet.txt  project.yml
Scripts/: build_rust_bridge.sh  generate_app_icon.swift
Sources/SweepCore/: DemoTorrentEngine.swift  TorrentEngine.swift  TorrentStore.swift
Sources/SweepCore/Model/: ByteFormatter.swift  Torrent.swift  TorrentDisplayFormat.swift
Sources/SweepCore/Persistence/: AppPersistence.swift  SweepDatabase.swift
Sources/SweepIOS/App/: IOSAddTorrentSheet.swift  IOSContentView.swift  IOSDisplayFormat.swift  IOSOpenInPresenter.swift  IOSSegmentedProgressView.swift  IOSTorrentFileLocation.swift  IOSTorrentInspectorView.swift  SweepIOSApp.swift
Sources/SweepIOS/Resources/: Info.plist
Sources/SweepIOS/Resources/AppIcon.icon/: icon.json
Sources/SweepMac/App/: AddTorrentView.swift  AppWindowID.swift  ContentView.swift  SegmentedProgressView.swift  SettingsView.swift  SidebarView.swift  SweepApp.swift  TorrentActions.swift  TorrentActivityInspector.swift  TorrentDisplayFormat.swift  TorrentFileLocation.swift  TorrentFilesInspector.swift  TorrentInfoInspector.swift  TorrentInputHelpers.swift  TorrentInspectorControls.swift  TorrentInspectorPanelPresenter.swift  TorrentInspectorWindowView.swift  TorrentListView.swift  TorrentOptionsInspector.swift  TorrentPeersInspector.swift  TorrentTrackersInspector.swift
Sources/SweepMac/Resources/: Info.plist
Sources/SweepMac/Resources/AppIcon.icon/: icon.json
Sources/SweepRQBitBridge/: RqbitBridge.swift  RqbitEngine.swift
Sources/SweepRustFFI/: module.modulemap
Sweep.xcodeproj/: project.pbxproj
Sweep.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Sweep.xcodeproj/xcshareddata/xcschemes/: Sweep-iOS.xcscheme  Sweep.xcscheme
Tests/SweepCoreTests/: AppPersistenceTests.swift  TorrentDisplayFormatTests.swift  TorrentStoreTests.swift
docs/: FEATURES.md
rust/patches/: rqbit-inspector-stats.patch  rqbit-piece-snapshot.patch  rqbit-tracker-compat.patch
rust/patches/librqbit-dualstack-sockets/: Cargo.toml
rust/patches/librqbit-dualstack-sockets/src/: bind_device.rs  error.rs  socket.rs  tests.rs
rust/patches/librqbit-dualstack-sockets/src/bind_device/: tests.rs
rust/sweep-rqbit/: Cargo.toml
rust/sweep-rqbit/src/: lib.rs
