[package]
name = "sweep-rqbit"
version = "0.1.0"
edition = "2024"

[lib]
name = "sweep_rqbit"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
libc = "0.2"
librqbit = { path = "../../references/rqbit/crates/librqbit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
