[package]
name = "sweep-rqbit"
version = "0.1.0"
edition = "2024"

[lib]
name = "sweep_rqbit"
crate-type = ["cdylib"]

[[bin]]
name = "uniffi-bindgen-swift"
path = "src/bin/uniffi-bindgen-swift.rs"

[dependencies]
anyhow = "1"
futures-channel = "0.3"
librqbit = { path = "../../references/rqbit/crates/librqbit" }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
uniffi = { version = "0.31.1", features = ["cli"] }
